# GAMES101-Assignment

./: .gitignore  .gitmodules  README.md  misc.md
assignment0/: CMakeLists.txt  Readme.md  main.cpp
assignment1/: CMakeLists.txt  README.md  main.cpp  rasterizer.hpp
assignment2/: CMakeLists.txt  README.md  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
assignment3/: CMakeLists.txt  README.md  Shader.hpp  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
assignment4/: CMakeLists.txt  README.md  main.cpp
assignment5/: CMakeLists.txt  README.md  Renderer.cpp  Triangle.hpp
assignment6/: README.md
assignment6/code/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
